Fix incorrect overflow value

--- a/app/Popup.css
+++ b/app/Popup.css
@@ -15,8 +15,7 @@
   height: var(--popup-height);
   border-top: 1px solid transparent;
   box-sizing: border-box;
-  overflow-x: scroll;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 
